--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -5,8 +5,9 @@
 
 <body>
   <h1>Create a Team and Heros!</h1>
-
+<form method="post" action="/super_hero"
   <label for="team_name">Team Name:</label>
+  <input 
 
 
 
