--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -7,7 +7,7 @@
   <h1>Create a Team and Heros!</h1>
 <form method="post" action="/super_hero"
   <label for="team_name">Team Name:</label>
-  <input type="text" name="team[name]"
+  <input type="text" name="team[name]">
 
 
 
