--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -8,7 +8,7 @@
 <form method="post" action="/super_hero"
   <label for="team_name">Team Name:</label>
   <input type="text" name="team[name]">
-  <label for="team_motto">Team Name:</label>
+  <label for="team_motto">Team Motto:</label>
 
 
 
