--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -9,6 +9,8 @@
   <label for="team_name">Team Name:</label>
   <input type="text" name="team[name]">
   <label for="team_motto">Team Motto:</label>
+  <input type="text" name="team[motto]">
+
 
 
 
