Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,14 +5,14 @@
 
 <body>
   <h1>Create a Team and Heros!</h1>
-<form method="post" action="/super_hero"
+<form method="post" action="/teams"
   <label for="team_name">Team Name:</label>
   <input type="text" name="team[name]">
   <label for="team_motto">Team Motto:</label>
   <input type="text" name="team[motto]"><br><br>
 
   <h2>Hero 1</h2>
-  
+
 
 
 
