--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,9 +5,8 @@
 
 <body>
   <h1>Create a Team and Heros!</h1>
-<form method="post" action="/teams"
-  <label for="team_name">Team Name:</label>
-  <input type="text" name="team[name]">
+<form method="post" action="/teams">
+  Team Name: <input type="text" name="team[name]"><br>
   <label for="team_motto">Team Motto:</label>
   <input type="text" name="team[motto]"><br><br>
 
