--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,7 +7,7 @@
   <h1>Create a Team and Heros!</h1>
 <form method="post" action="/teams">
   Team Name: <input type="text" name="team[name]"><br>
-  Team Motto: <input type="text" name="team[motto]"><br><br>
+  Team Motto: <input type="text" name="team[motto]"><br>
 
   <h2>Hero 1</h2>
 
