--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 
-  <h1>Create a Team and Heros!</h1>
+  <h1>Create a Team and Heroes!</h1>
 <form method="post" action="/teams">
   Team Name: <input type="text" name="team[name]"><br>
   Team Motto: <input type="text" name="team[motto]"><br>
